# SharpVoxTTS

./: .gitignore  CMakeLists.txt  DOCUMENTATION.md  Example.cpp  LICENSE  Makefile  README.md  main.cpp
data/: README.txt  compile.py  english.dict
include/: AudioProcessor.h  DictionaryReader.h  HeteronymResolver.h  JapaneseParser.h  KlattSynthesizer.h  KlattSynthesizerFP.h  KlattschParser.h  LibraryData.h  Phonemizer.h  PitchInterpolator.h  SpeechRenderer.h  SynthData.h  Tables.h  TextCommands.h  TtsEngine.h  VoiceData.h  VoicePresets.h  audio_processor.h  klatt_synthesizer.h  klattsch_parser.h  letter_to_sound.h  lexicon_reader.h  library_data.h  morphology.h  phonemizer.h  pitch_interpolator.h  speech_renderer.h  text_commands.h  tts_engine.h  voice_data.h
platform/android/: local.properties  settings.gradle
platform/android/app/: build.gradle  local.properties
platform/android/app/src/main/: AndroidManifest.xml
platform/android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
platform/android/app/src/main/java/dev/bytesizedfox/sharpvoxapp/: App.java  DictionaryEdit.java  MainActivity.java
platform/android/app/src/main/java/dev/bytesizedfox/sharpvoxapp/tts/: CheckVoiceData.java  GetSampleText.java  TTSSettingsActivity.java  TTSUtil.java  TtsService.java
platform/android/app/src/main/res/layout/: activity_dictionary_edit.xml  activity_main.xml  settings_overlay.xml
platform/android/app/src/main/res/menu/: menu.xml
platform/android/app/src/main/res/values/: strings.xml  themes.xml
platform/android/app/src/main/res/values-night/: themes.xml
platform/android/app/src/main/res/xml/: tts_engine.xml
platform/android/gradle/wrapper/: gradle-wrapper.properties
platform/cli/: AlsaPlayer.cpp  AlsaPlayer.h  Main.cpp  WavWriter.cpp  WavWriter.h  main.cpp  wav_writer.cpp  wav_writer.h
platform/dos/: djgpp_compat.h
platform/lib/: SharpVox.cpp  SharpVox.h  sharpvox_speaker.cpp  sharpvox_speaker.h
platform/pc/: bet203a.xpm  compile.sh  den203a.xpm  fra203a.xpm  har203a.xpm  kid203a.xpm  main.cpp  pau203a.xpm  rit203a.xpm  urs203a.xpm  wen203a.xpm
platform/rp2040/: CMakeLists.txt  main.cpp
platform/rp2040/test/: package.json  test.mjs
platform/twatch/: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults
platform/twatch/main/: CMakeLists.txt  axp202.c  axp202.h  ble_spp.c  ble_spp.h  i2s_audio.c  i2s_audio.h  main.c  st7789.c  st7789.h  visemes.h
platform/twatch/sharptalk/: CMakeLists.txt  sharpvox_wrapper.cpp  sharpvox_wrapper.h
platform/wasm/: SharpVoxWasm.cpp  sharpvox_wasm.cpp
platform/wasm/wwwroot/: index.html
platform/wasm/wwwroot/js/: AudioPlayer.js  Dec2KlattschConverter.js  LipsyncRenderer.js  MidiConverter.js  UstConverter.js  main.js  ui.js  worker.js
platform/wasm/wwwroot/voices/: Tommy.json  beth.json  chris.json  deborah.json  jack.json  jess.json  john.json  matt.json  pirate.json  whisper.json
src/: AudioProcessor.cpp  DictionaryReader.cpp  HeteronymResolver.cpp  JapaneseParser.cpp  KlattSynthesizer.cpp  KlattSynthesizerFP.cpp  KlattschParser.cpp  LetterToSound.cpp  LibraryDataDictionary.cpp  LibraryDataSymbols.cpp  Morphology.cpp  Phonemizer.cpp  PitchInterpolator.cpp  SpeechRenderer.cpp  Tables.cpp  TextCommands.cpp  TtsEngine.cpp  VoicePresets.cpp  audio_processor.cpp  heteronym_resolver.cpp  klatt_synthesizer.cpp  klattsch_parser.cpp  letter_to_sound.cpp  lexicon_reader.cpp  library_data_dictionary.cpp  library_data_symbols.cpp  morphology.cpp  phonemizer.cpp  pitch_interpolator.cpp  speech_renderer.cpp  tables.cpp  text_commands.cpp  tts_engine.cpp
tests/: DumpJapanese.cpp  DumpStages.cpp  TestSinging.cpp  TestVoiceCommand.cpp  dump_stages.cpp
